Data helpers added. Null values handling changed.

--- a/Null values Analysys.ipynb
+++ b/Null values Analysys.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -713,7 +713,7 @@
        "[8 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1046,18 +1046,19 @@
        "[8 rows x 33 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Series([], dtype: float64)\n",
-      "\n",
-      "Dataframe shape is:  (1460, 33)\n",
-      "Rows and columns that contain null values shape is:  (0, 0)\n"
+     "ename": "NameError",
+     "evalue": "name 'get_null_values_summary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-5a18747c6229>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtrain_number_types_filled\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mget_null_values_summary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_number_types_filled\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_null_values_summary' is not defined"
      ]
     }
    ],
@@ -1144,7 +1145,7 @@
     "print('Pure dataframe:')\n",
     "get_null_values_summary(train)\n",
     "print('\\nDataframe after filling')\n",
-    "get_null_values_summary(train_categorical_filled)"
+    "get_null_values_summary(train_categorigetcal_filled)"
    ]
   },
   {
