Setting id as index. Data file deleted.

--- a/Opening Analysis.ipynb
+++ b/Opening Analysis.ipynb
@@ -2376,6 +2376,16 @@
     "df = get_dummy_variables_for_object_dtypes(train)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df_with_columns_contatining_nulls(input_df):\n",
+    "    return input_df.loc[:, input_df.isnull().any()]"
+   ]
   }
  ],
  "metadata": {
