Basic regression with lasso and ridge on whole dataset.

--- a/Opening Analysis.ipynb
+++ b/Opening Analysis.ipynb
@@ -571,6 +571,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SalePrice                1.000000\n",
+       "GrLivArea                0.708624\n",
+       "cstperSFofLivingSpace    0.640819\n",
+       "GarageCars               0.640409\n",
+       "GarageArea               0.623431\n",
+       "TotalBsmtSF              0.613581\n",
+       "1stFlrSF                 0.605852\n",
+       "FullBath                 0.560664\n",
+       "TotRmsAbvGrd             0.533723\n",
+       "YearBuilt                0.522897\n",
+       "YearRemodAdd             0.507101\n",
+       "MasVnrArea               0.475241\n",
+       "GarageYrBlt              0.470177\n",
+       "Fireplaces               0.466929\n",
+       "BsmtFinSF1               0.386420\n",
+       "LotFrontage              0.334901\n",
+       "WoodDeckSF               0.324413\n",
+       "2ndFlrSF                 0.319334\n",
+       "OpenPorchSF              0.315856\n",
+       "HalfBath                 0.284108\n",
+       "cstperSFofLotArea        0.273401\n",
+       "LotArea                  0.263843\n",
+       "BsmtFullBath             0.227122\n",
+       "BsmtUnfSF                0.214479\n",
+       "BedroomAbvGr             0.168213\n",
+       "ScreenPorch              0.111447\n",
+       "PoolArea                 0.092404\n",
+       "MoSold                   0.046432\n",
+       "3SsnPorch                0.044584\n",
+       "BsmtFinSF2              -0.011378\n",
+       "BsmtHalfBath            -0.016844\n",
+       "MiscVal                 -0.021190\n",
+       "LowQualFinSF            -0.025606\n",
+       "YrSold                  -0.028923\n",
+       "EnclosedPorch           -0.128578\n",
+       "KitchenAbvGr            -0.135907\n",
+       "Name: SalePrice, dtype: float64"
+      ]
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr()['SalePrice'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 268,
    "metadata": {},
    "outputs": [
