Notebook cleaning. Minor clf_results class improvements.

--- a/Linear regression.ipynb
+++ b/Linear regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "       scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -146,7 +146,7 @@
        "1465  212642.778402"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,29 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<utils.clf_results.clfResult at 0x1f44d656978>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results = clfResult(grid_ridge.best_estimator_, 'sth', trainWithDummies.columns,\n",
-    "                    grid_ridge.predict(testWithDummies), store_classifier=True, store_predictions=True)\n",
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -227,16 +205,24 @@
     }
    ],
    "source": [
-    "def predict(clf, submission_name= None):\n",
+    "def predict(clf, xtrain, ytrain, test, name, store_classifier=False, store_predictions=True):\n",
     "    grid = GridSearchCV(clf, param_grid)\n",
-    "    grid.fit(trainWithDummies, ytrain)\n",
+    "    grid.fit(xtrain, ytrain)\n",
+    "    predictions = grid.predict(test)\n",
     "\n",
-    "    predictions = grid.predict(testWithDummies)\n",
-    "    get_submission(predictions, submission_name).head()\n",
-    "    return grid\n",
+    "    results = clfResult(grid.best_estimator_, name, test.columns,\n",
+    "                        predictions, grid.best_params_, store_classifier=store_classifier, store_predictions=store_predictions)\n",
+    "    return results\n",
     "\n",
-    "grid = predict(Lasso(), 'lasso_normalized_alpha_tuned')"
+    "results = predict(Lasso(), trainWithDummies, ytrain, testWithDummies, 'test')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
