Readme added, Ensemble cleaned

--- a/oldVersions/Trees.ipynb
+++ b/oldVersions/Trees.ipynb
@@ -157,6 +157,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outliers_idx = pd.Series([31, 186, 314, 463, 496, 524, 633, 689, 875, 969, 971 ,1183, 1299, 1325, 1384, 1433, 1454, 441, 589, 692, 775, 804, 899, 1047, 1170, 1182, 1360])\n",
+    "\n",
+    "X_train = trainWithDummies[~trainWithDummies.index.isin(outliers_idx)].loc[:, best_cols]\n",
+    "y_train = np.log1p(ytrain[~ytrain.index.isin(outliers_idx)])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
