--- a/Ensemble.ipynb
+++ b/Ensemble.ipynb
@@ -1188,7 +1188,7 @@
    "source": [
     "### Parameters train vs test error score.\n",
     "\n",
-    "This plot is usefull in gaining insight on which parameters to choose. Red line shows parameters choosed by grid or randomized search, but it "
+    "This plot is usefull in gaining insight on which parameters to choose. Red line shows parameters choosed by grid or randomized search, but it shows all combinations of parameters that were checked."
    ]
   },
   {
